--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -5,5 +5,23 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_share">Share</string>
+    <string name="action_map">Show Location</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <string name="pref_location_title">Location</string>
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_defaultValue" translatable="false">94043</string>
+
+    <string name="pref_temperature_title">Temperature Units</string>
+    <string name="pref_temperature_key" translatable="false">units</string>
+    <string name="pref_temperature_defaultValue" translatable="false">metric</string>
+    <string name="pref_temperature_dialogTitle">Select the units</string>
+    <string name="pref_temperature_label_metric">Metric</string>
+    <string name="pref_temperature_label_imperial">Imperial</string>
+    <string name="pref_temperature_metric" translatable="false">metric</string>
+    <string name="pref_temperature_imperial" translatable="false">imperial</string>
+
 
 </resources>
